--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,10 +30,10 @@ jobs:
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.21
-      - uses: actions/checkout@v4
+          go-version-file: go.mod
       - run: make get-deps
       - run: go mod tidy -diff
       - name: golangci-lint
